--- a/index.html
+++ b/index.html
@@ -1,12 +1,186 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Глейси</title>
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <header class="main-header">
+            <div class="container">
+                <div class="logo">
+                    <a href="index.html"><img src="img/logo.svg" width="154" height="64" alt="Gllacy"></a>
+                </div>
+                <nav class="main-navigation" <ul>
+                    <li>
+                        <a href="#">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="#">Доставка и оплата</a>
+                    </li>
+                    <li>
+                        <a href="#">О компании</a>
+                    </li>
+                    </ul>
+                </nav>
+                <div class="user-blok">
+                    <a class="search" href="#"><img src="img/search.svg" width="17" height="17" alt="Поиск"></a>
+                    <a class="login" href="#"><img src="img/login.svg" width="21" height="19">Вход</a>
+                    <a class="basket" href="#"><img src="img/basket" width="21" height="20" alt="Корзина">Пусто</a>
+                </div>
+                <section class="header-contact">
+                    С 10 до 20, ежедневно
+                    <span class="namber">8 812 450-25-25</span>
+                </section>
+            </div>
+        </header>
+        <main class="conteiner">
+            <div id="slider">
+                <img id="one" src="img/razz.jpg" width="560" height="229">
+                <img id="two" src="img/">
+                <img id="three" src="img/">
+                <ul>
+                    <li>
+                        <a href="one"></a>
+                    </li>
+                    <li>
+                        <a href="two"></a>
+                    </li>
+                    <li>
+                        <a href="three"></a>
+                    </li>
+                </ul>
+                <div class="slider-header">
+                    <h1>Крем-брюле и пломбир с малиновым джемом</h1>
+                    <a class="btn" href="#">Давайте оба!</a>
+                </div>
+            </div>
+            <div class="banner">
+                <div class="banner-left">
+                    <h2 class="banner-header">Малинка даром!</h2>
+                    <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+                    <a class="btn-banner">Хочу варенье!</a>
+                </div class="banner-right">
+                <p>
+                    <h2 class="banner-header">Шоколадки даром!</h2> При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
+                </p>
+                <a class="btn-banner">Хочу варенье!</a>
+            </div>
+            </div>
+            <div class="catalog-icecream">
+                <div class="icecream">
+                    <div class="hit">Хит</div>
+                    <div class="preview">
+                        <img src="img/" width="" height="" alt="Сливочное">
+                    </div>
+                    <span class="price">310P/кг<span>
+                        <a class="name-icecream">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                </div>
+                <div class="icecream">
+                    <div class="hit">Хит</div>
+                    <div class="preview">
+                        <img src="img/" width="" height="" alt="Сливочно-кофейное">
+                    </div>
+                        <span class="price">380P/кг<span>
+                        <a class="name-icecream">Сливочно-кофейное с кусочками шоколада</a>
+                </div>
+                <div class="icecream">
+                      <div class="hit">Хит</div>
+                      <div class="preview">
+                          <img src="img/" width="" height="" alt="Сливочно-клубничное">
+                      </div>
+                      <span class="price">355P/кг<span>
+                      <a class="name-icecream">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                </div>
+                <div class="icecream">
+                      <div class="hit">Хит</div>
+                      <div class="preview">
+                          <img src="img/" width="" height="" alt="Сливочное крем-брюле">
+                      </div>
+                      <span class="price">415P/кг<span>
+                      <a class="name-icecream">Сливочное крем-брюле с карамельной подливкой</a>
+                </div>
+            </div>
+            <div class="advantages">
+                <h3>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
+                <div class="block-left">
+                    <ul>
+                        <li><img src="img/" width="" height="">
+                            Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+                        </li>
+                        <li><img src="img/" width="" height="">
+                            Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+                        </li>
+                    </ul>
+                <div class="block-right">
+                    <ul>
+                        <li><img src="img/" width="" height="">
+                            Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+                        </li>
+                        <li><img src="img/" width="" height="">
+                            Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="blog">
+                <span>Новое в нашем блоге</span>
+                <a class="blog-header" href="#">
+                   10  способов сервировки фруктовых щербетов к столу
+                </a>
+            </div>
+            <div class="newsletter">
+                <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)
+                </p>
+                <form action="https://echo.htmlacademy.ru">
+                    <input type="text" name="email" id="total-field" value="Электронная почта">Электронная почта
+                    <button type="submit">Отправить</button>
+                </form>
+            </div>
+            <div class="map">
+                <div class="map-contact">
+                    Адрес главного офиса и офлайн магазина:<br>
+                    <span class="adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</span><br> Для заказов по телефону:
+                    <span class="nomber">8 812 450-25-25</span><br> (с 10 до 20 ежедневно)
+                    <a class="feedback" href="#">Форма обратной связи</a>
+                </div>
+            </div>
+        </main>
+        <footer class="main-footer">
+            <div class="footer-social">
+                <a class="social-btn social-btn-vk" href="#"><img src="img/social_tw.png" width="25" height="16" alt="Твиттер"></a>
+                <a class="social-btn social-btn-vk" href="#"><img src="img/social_in.png" width="25" height="16" alt="Инстаграм"></a>
+                <a class="social-btn social-btn-fb" href="#"><img src="img/social_fb.png" width="12" height="22" alt="Фейсбук"></a>
+                <a class="social-btn social-btn-inst" href="#"><img src="img/social_vk.png" width="21" height="21" alt="Вконтакте"></a>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-item">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="img/" width="" height="">Для поставщиков</a>
+                        </li>
+                        <li>
+                            <a href="#">О производстве</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-menu-item">
+                    <ul>
+                        <li>
+                            <a href="#">Наши документы</a>
+                        </li>
+                        <li>
+                            <a href="#">Экологические стандарты</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <img src="img/" width="" height="">
+                <p>Сделано в
+                    <a href="#>" HTML Academy © 2016</a>
+                </p>
+            </div>
+        </footer>
+    </body>
 </html>
