--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
                     </ul>
                 </nav>
                 <div class="user-blok">
-                    <a class="search" href="#"><img src="img/search.svg" width="17" height="17" alt="Поиск"></a>
+                    <a class="search" href="#">1</a>
                     <a class="login" href="#">Вход</a>
                     <a class="basket" href="#">Пусто</a>
                         <span class="quantity"><span>
                     </a>
                 </div>
                 <section class="header-contact">
-                    <span class="time">С 10 до 20, ежедневно<span></br>
+                    <p class="time">С 10 до 20, ежедневно
                     <span class="phone-number">8 812 450-25-25</span>
+                    </p>
                 </section>
             </div>
         </header>
@@ -71,7 +72,7 @@
                     <div class="price-title">
                         <span class="price">310 </span><span class="ruble">P/кг</span>
                         <p class="product-title">
-                            <a class="product-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                            <a class="product-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                         </p>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                     <div class="price-title">
                         <span class="price">380 </span><span class="ruble">P/кг</span>
                         <p class="product-title">
-                            <a class="product-title">Сливочно-кофейное с кусочками шоколада</a>
+                            <a class="product-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
                         </p>
                     </div>
                 </div>
@@ -99,7 +100,7 @@
                     <div class="price-title">
                         <span class="price">355 </span><span class="ruble">P/кг</span>
                         <p class="product-title">
-                            <a class="product-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                            <a class="product-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                         </p>
                     </div>
                 </div>
@@ -113,7 +114,7 @@
                     <div class="price-title">
                         <span class="price">415 </span><span class="ruble">P/кг</span>
                         <p class="product-title">
-                            <a class="product-title">Сливочное крем-брюле с карамельной подливкой</a>
+                            <a class="product-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
                         </p>
                     </div>
                 </div>
@@ -149,16 +150,17 @@
                     </p>
                     <form class="newsletter-form"action="https://echo.htmlacademy.ru">
                         <input type="text" name="email" id="total-field" placeholder="Электронная почта">
-                        <button type="submit">Отправить</button>
+                        <button class="submit" type="submit">Отправить</button>
                     </form>
                 </div>
             </div>
             <div class="map">
                 <div class="map-contact">
-                    Адрес главного офиса и офлайн магазина:<br>
+                    <p>Адрес главного офиса и офлайн магазина:
                     <span class="adress">ул. Большая Конюшенная 19/8, Санкт-Петербург</span><br> Для заказов по телефону:
                     <span class="nomber">8 812 450-25-25</span><br> (с 10 до 20 ежедневно)
                     <a class="feedback" href="#">Форма обратной связи</a>
+                    </p>
                 </div>
             </div>
         </main>
@@ -172,7 +174,7 @@
                 </div>
                 <div class="footer-menu">
                     <p class="footer-menu-item">
-                        <a href="#"><img src="img/" width="" height="">Для поставщиков</a>
+                        <a href="#">Для поставщиков</a>
                         <a href="#">О производстве</a>
                     </p>
                     <p class="footer-menu-item">
