Скрыла pop_up проверила на валидность поправила

--- a/catalog.html
+++ b/catalog.html
@@ -28,14 +28,14 @@
                         </ul>
                     </nav>
                     <div class="user-blok">
-                        <div class="search" href="#">
+                        <div class="search">
                             <div class="search-inner">
                                 <form class="search-form">
                                     <input class="search-user" type="text" name="search" placeholder="Что ищем?">
                                 </form>
                             </div>
                         </div>
-                        <div class="login" href="#">Вход
+                        <div class="login">Вход
                             <div class="login-inner">
                                 <form class="login-form" method="post">
                                     <fieldset class="user-form">
@@ -56,7 +56,7 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="basket basket-full" href="#"><span class="quantity">2 товара</span>
+                        <div class="basket basket-full"><span class="quantity">2 товара</span>
                             <div class="basket-inner">
                                 <div class="user-basket">
                                     <div class="product-basket">
@@ -134,7 +134,7 @@
                     <div class="filter-sorting">
                         <div class="filter-title">Сортировка:</div>
                         <div class="sorting-selected">по популярности
-                            <a class="angle-down"href="#"></a>
+                            <a class="angle-down" href="#"></a>
                             <ul class="sub-menu">
                                 <li><a href="#1">по популярности</a></li>
                                 <li><a href="#2">сначала недорогие</a></li>
@@ -157,22 +157,22 @@
                         <div class="filter-title">Жирность:</div>
                         <div class="fat-controls">
                             <label class="control-radio">
-                                <input id="radio" name="radio" type="radio">
+                                <input id="radio-1" name="radio" type="radio">
                                 <span class="control-indicator"></span>
                                 0%
                             </label>
                             <label class="control-radio">
-                                <input id="radio" name="radio" type="radio">
+                                <input id="radio-2" name="radio" type="radio">
                                 <span class="control-indicator"></span>
                                 до 10%
                             </label>
                             <label class="control-radio">
-                                <input id="radio" name="radio" type="radio">
+                                <input id="radio-3" name="radio" type="radio">
                                 <span class="control-indicator"></span>
                                 до 30%
                             </label>
                             <label class="control-radio">
-                                <input id="radio" name="radio" type="radio">
+                                <input id="radio-4" name="radio" type="radio">
                                 <span class="control-indicator"></span>
                                 выше 30%
                             </label>
@@ -538,7 +538,7 @@
                 </div>
             </article>
             <div class="pagination">
-                <span class="pagination-btn-back" href="#">❮</span>
+                <span class="pagination-btn-back"></span>
                 <ul>
                     <li>
                         <a class="namber-selected">1</a>
